Add a couple more keywords to package.json

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "lines",
     "remove",
     "strip",
-    "without"
+    "without",
+    "line",
+    "trailing"
   ],
   "author": "Lily Scott <me@suchipi.com>",
   "license": "MIT",
