--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
   ],
   "author": "Lily Scott <me@suchipi.com>",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/suchipi/without-comments.git"
+  },
   "devDependencies": {
     "eslint": "^8.9.0",
     "eslint-config-unobtrusive": "^1.2.5",
